# XCHIP8

./: .gitignore  CMakeLists.txt  chip8.cpp  main.cpp
glad/src/: glad.c
src/: chip8.cpp  chip8.h  main.cpp  menu.cpp  menu.h  shader.h  state.cpp  state.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/imgui/: imgui_impl_opengl3.cpp  opensans.h
src/imgui/fonts/: OpenSans.h  RobotoMono.h
src/shaders/: fragment.glsl  vertex.glsl
